# 2025-Summer-Tuesday-uv

./: .coverage  .gitignore  README.md  pyproject.toml
