[project]
name = "2025-summer-tuesday-uv"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pyhamcrest>=2.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]
